# My-CImg-Widgets

./: CMakeLists.txt  README.txt
app/: image_db_query.cpp  image_db_viewer.cpp  image_list_query.cpp  image_list_viewer.cpp  image_viewer.cpp
include/: MyApplicationParameters.h  MyImageAlgorithm.h  MyImageCanvas.h  MyImageDB.h  MyImageInfo.h  MyImageList.h  MyImageListCanvas.h  MyImageListWindow.h  MyImageQuery.h  MyImageWindow.h  queryhaar.h  util.h
src/db/: MyImageDB.cpp  MyImageQuery.cpp
src/gui/: MyImageCanvas.cpp  MyImageList.cpp  MyImageListCanvas.cpp  MyImageListWindow.cpp  MyImageWindow.cpp
test_data/: .directory  REAMDE.txt  casimage-selected-rep-readme.txt  casimage_selected-readme.txt
